# webanno-spacy-converter

./: README.md  alzir.tsv  makefiles.py  makesturp.py  pyproject.toml  setup.py  srGeoGeography.spacy  srGeoGeography.tsv  srGeoNews62.spacy  srGeoNews62.tsv  srGeoTravel-Italy-Germany.spacy  srGeoTravel-Italy-Germany.tsv  wiki.spacy  wiki.tsv
my_nlp_el_cnn1/: config.cfg  meta.json  sentencizer.json  tokenizer
my_nlp_el_cnn1/entity_linker/: cfg  model
my_nlp_el_cnn1/tagger/: model
notebooks/: spacy_test_visualization.ipynb
test_data/: example.spacy  example.tsv  examplev2.spacy  output.tsv  test_sr_lexix.tsv
webanno_spacy_converter/: README.md  requirements.txt
webanno_spacy_converter/converters/: spacy_to_webanno.py  webanno_to_spacy.py
webanno_spacy_converter/models/: annotation_sentence.py  annotation_token.py  sentence_with_mwes.py
webanno_spacy_converter/notebooks/: spacy_test_visualization.ipynb
webanno_spacy_converter/parsers/: base_parser.py  tsv_parser_v3.py
webanno_spacy_converter/tests/: test_converters.py  test_parsers.py
webanno_spacy_converter/writers/: webanno_writer.py
